syntax = "proto3";

option csharp_namespace = "PlatformService";

service GrpcPlatform {
	rpc GetAllPlatforms(GetAllRequest) returns (PlatformRespone);
}

message GetAllRequest {}

message GrpcPlatformModel{
	int32 platformId =1;
	string name = 2;
	string publisher = 3;
}

message PlatformRespone {
	repeated GrpcPlatformModel plaform = 1;

}